--- a/day1/css/style.css
+++ b/day1/css/style.css
@@ -24,7 +24,7 @@ background-color:red;
      background-color:green;
  }
  .blue {
-     background-color:blue;
+     background-color:darkblue;
  }
 
 
