day 9 morning exercise

--- a/day9/src/less/style.less
+++ b/day9/src/less/style.less
@@ -1,8 +1,8 @@
 body {
-	background-color: black;
+	background-color: white;
 	font-family: sans-serif;
 }
 
 h1 {
-	color: skyblue;
+	color: red;
 }
