--- a/day9/src/less/style.less
+++ b/day9/src/less/style.less
@@ -1,8 +1,28 @@
-body {
-	background-color: white;
+
+
+	body {
+		background-color: grey;
+	
 	font-family: sans-serif;
+	max-width: 1000px;
+	
 }
 
 h1 {
-	color: red;
+	background-color: black;
+	height: 100px;
+	width: 1000px;
 }
+div {
+	top: -100px;
+	display: flex;
+
+	flex-direction: column;
+	align-items: center;
+}
+
+p{
+}
+
+
+
